--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -19,7 +19,7 @@ body {
 }
 .navbar-brand {
   font-family: 'Ysabeau', sans-serif;
-  color: #ffc107;
+/*  color: #ffc107;*/
   font-weight: bold;
   text-transform: uppercase;
 }
