--- a/public/css/custom-14.css
+++ b/public/css/custom-14.css
@@ -44,6 +44,8 @@ body {
 .bg-added { background-color: #ced4da !important; }
 .bg-received { background-color: #ffcd39 !important; }
 .bg-sent { background-color: #3dd5f3 !important; }
+.bg-on-the-border { background-color: #e685b5 !important; }
+.bg-on-route { background-color: #fd9843 !important; }
 .bg-sorted { background-color: #c29ffa !important; }
 .bg-arrived { background-color: #4dd4ac !important; }
 .bg-sent-locally { background-color: #6ea8fe !important; }
