--- a/public/css/offcanvas.css
+++ b/public/css/offcanvas.css
@@ -7,10 +7,11 @@ body {
 @media (max-width: 991.98px) {
   .offcanvas-collapse {
     position: fixed;
-    top: 56px; /* Height of navbar */
+    top: 0; /* Height of navbar */
     bottom: 0;
     left: 100%;
     width: 100%;
+    padding-top: 60px;
     padding-right: 1rem;
     padding-left: 1rem;
     overflow-y: auto;
