--- a/public/css/offcanvas-1.css
+++ b/public/css/offcanvas-1.css
@@ -7,11 +7,10 @@ body {
 @media (max-width: 991.98px) {
   .offcanvas-collapse {
     position: fixed;
-    top: 0; /* Height of navbar */
+    top: 58px; /* Height of navbar */
     bottom: 0;
     left: 100%;
     width: 100%;
-    padding-top: 60px;
     padding-right: 1rem;
     padding-left: 1rem;
     overflow-y: auto;
@@ -23,6 +22,10 @@ body {
   .offcanvas-collapse.open {
     visibility: visible;
     transform: translateX(-100%);
+  }
+  .offcanvas-collapse.close {
+    visibility: hidden;
+    transform: translateX(100%);
   }
 }
 
